# ChatGuard

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
chatguard/: __init__.py  __main__.py  audit.py  cli.py  detector.py  reporter.py  rules.py  scanner.py
tests/: __init__.py  test_audit.py  test_detector.py  test_rules.py  test_scanner.py
